import 'package:flutter/material.dart';
import 'package:flutter_riverpod/flutter_riverpod.dart';

enum AppTheme {
  apricot('暖杏'),
  celadon('青瓷'),
  rose('雾玫');

  const AppTheme(this.label);
  final String label;
}

class ThemeChoice extends Notifier<AppTheme> {
...
